Correct logic in Member Service